# time-tracker

./: Cargo.toml  README.md
.github/workflows/: general.yml
src/: cfg.rs  cli.rs  entry.rs  handlers.rs  logger.rs  main.rs
