[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.19", features = ["derive"] }
csv = "1.1.6"
indoc = "1.0.7"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
shellexpand = "2.1.2"
